All lazy loading added

--- a/index.html
+++ b/index.html
@@ -1569,7 +1569,7 @@ $(function() {
 				<p>A really fun place for rides and live entertainment featuring your favorite movie characters, and their studio tour is amazing. We love seeing where some of our favorite movies were filmed!</p>
 			</div>
 			<div class="xs-display-none col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
-				<img class="animateblock btm" src="images/justine/KnottsBerryFarm.jpg">
+				<img class="lazy animateblock btm" data-original="images/justine/KnottsBerryFarm.jpg" width="2000" height="1000">
 				<div class="caption">
 					<p>Camp Snoopy at Knott's Berry Farm. </br> <span class="italc cred inline no-left-margin">Courtesy of Knott's Berry Farm</span></p>
 				</div>
@@ -1577,7 +1577,7 @@ $(function() {
 		</div>
 		<div class="row">
 			<div class="col-xs-7 col-md-7">
-				<img class="over animateblock btm" src="images/justine/simpsons-universal.jpg">
+				<img class="lazy over animateblock btm" data-original="images/justine/simpsons-universal.jpg" width="2000" height="1000">
 			</div>
 			<div class="col-xs-5 col-md-5">
 				<div class="caption">
@@ -1615,15 +1615,15 @@ $(function() {
 				<p>We love visiting the many tide pools in Southern California! One of our favorite spots is in La Jolla, called Children's Pool. There's a beach where you can look for small sea creatures and get up close and personal with the harbor seals and sea lions, who love to sun themselves!</p>
 			</div>
 			<div class="xs-display-none col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
-				<img class="sect-break under animateblock btm" src="images/justine/legoland.jpg">
+				<img class="lazy sect-break under animateblock btm" data-original="images/justine/legoland.jpg" width="2000" height="1000">
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-xs-7 col-md-7">
-				<img class="over animateblock btm" src="images/justine/supplied_justine_2.jpg">
+				<img class="lazy over animateblock btm" data-original="images/justine/supplied_justine_2.jpg" width="2000" height="1000">
 			</div>
 			<div class="xs-display-none col-xs-5 col-md-5 r-rail-above">
-				<img class="sect-break under animateblock btm" src="images/justine/supplied_justine_1.jpg">
+				<img class="lazy sect-break under animateblock btm" data-original="images/justine/supplied_justine_1.jpg" width="2000" height="1000">
 			</div>
 			<div class="col-xs-5 col-md-5">
 				<div class="caption">
@@ -1663,7 +1663,7 @@ $(function() {
 		</div>
 		<div class="row">
 			<div class="col-xs-7 col-md-7">
-				<img class="animateblock btm" src="images/justine/san_clemente.jpg">
+				<img class="lazy animateblock btm" data-original="images/justine/san_clemente.jpg" width="2000" height="1000">
 			</div>
 			<div class="col-xs-5 col-md-5">
 				<div class="caption">
@@ -1708,7 +1708,7 @@ $(function() {
 				<p>Our all-time favorite place to hike! Gorgeous isn't a big enough word to describe this area. There are many trails to choose from and it's fairly flat, so it's easy for children to join the fun! We pack a picnic and head out for an afternoon together often, and we always see something new.</p>
 			</div>
 			<div class="xs-display-none col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
-				<img class="sect-break under animateblock btm" src="images/justine/supplied_justine_6.jpg">
+				<img class="lazy sect-break under animateblock btm" data-original="images/justine/supplied_justine_6.jpg" width="2000" height="1000">
 				<div class="caption">
 					<p>Feeding the animals at Bates Nut Farm.</p>
 					<p class="italc cred">Courtesy of Justine Howell</p>
@@ -1717,10 +1717,10 @@ $(function() {
 		</div>
 		<div class="row">
 			<div class="col-xs-7 col-md-7">
-				<img class="over animateblock btm" src="images/justine/supplied_justine_3.jpg">
+				<img class="lazy over animateblock btm" data-original="images/justine/supplied_justine_3.jpg" width="2000" height="1000">
 			</div>
 			<div class="xs-display-none col-xs-5 col-md-5 r-rail-above">
-				<img class="sect-break under animateblock btm" src="images/justine/idyllwild.jpg">
+				<img class="lazy sect-break under animateblock btm" data-original="images/justine/idyllwild.jpg" width="2000" height="1000">
 			</div>
 			<div class="col-xs-5 col-md-5">
 				<div class="caption">
