--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@ $(function() {
 	    <span class="caret"></span>
 	  </button>
 	  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-	  	<li class="btn"><span class="nav-explore">EXPLORE</span> NORTHERN CALIFORNIA
-		<span class="caret"></span></li>
+	  	<li class="btn"><a href="#nca-hero" class="region-link"><span class="nav-explore">EXPLORE</span> NORTHERN CALIFORNIA
+		<span class="caret"></span></a></li>
 	  	<div class="invisible-hover"></div>
 	  	<li class="nav-blogger"><a href="#nrthrn-blog-post">
 	  		<div class="blogger-circle" id="brandi-nav"></div>
@@ -287,8 +287,8 @@ $(function() {
 	    <span class="caret"></span>
 	  </button>
 	  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-	  	<li class="btn"><span class="nav-explore">EXPLORE</span> CENTRAL CALIFORNIA
-		<span class="caret"></span></li>
+	  	<li class="btn"><a href="#cca-hero" class="region-link"><span class="nav-explore">EXPLORE</span> CENTRAL CALIFORNIA
+		<span class="caret"></span></a></li>
 	  	<div class="invisible-hover"></div>
 	  	<li class="nav-blogger"><a href="#cntrl-blog-post">
 	  		<div class="blogger-circle" id="pattie-nav"></div>
@@ -311,8 +311,8 @@ $(function() {
 	    <span class="caret"></span>
 	  </button>
 	  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-	  	<li class="btn"><span class="nav-explore">EXPLORE</span> SOUTHERN CALIFORNIA
-		<span class="caret"></span></li>
+	  	<li class="btn"><a href="#sca-hero" class="region-link"><span class="nav-explore">EXPLORE</span> SOUTHERN CALIFORNIA
+		<span class="caret"></span></a></li>
 	  	<div class="invisible-hover"></div>
 	  	<li class="nav-blogger"><a href="#sthrn-blog-post">
 	  		<div class="blogger-circle" id="justine-nav"></div>
