Centered Blogger Mobile ToC Content

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ $(function() {
 			</div>
 			<ul class="toc-menu">
 	  			<li class="nav-explore">EXPLORE</li>
-	  			<li class="toc-region"><a href="#sca-hero">SOUTHERN CALIFORNIA</li>
+	  			<li class="toc-region"><a href="#sca-hero">SOUTHERN CALIFORNIA</a></li>
 	  			<li class="toc-blogger"><a href="#sthrn-blog-post">
 	  				<div class="blogger-circle"></div>
 	  				<div class="toc-with">with</br>
