--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@ $(function() {
 					<h6>Option #3: San Jose</h6>
 					<h5>San Jose</h5>
 					<p>You may know San Jose as the tech center of Northern California, but there's plenty for families to do there, too! Just about an hour away from Oakland, San Jose makes a fun and easy day trip. Start your morning at Happy Hollow Park and Zoo for a close up look at some really sweet animals. After that, head over to the Children's Discovery Museum for lunch and to play. You and your kiddos will love the gardens, imaginative exhibits, and opportunities to engage with science.</p>
-					<p>Now do you see why it was so easy for me to fall in love with Northern California? It's the very best of everything our great country has to offer, and there's no place I'd rather <a href="http://mamaknowsitall.com/">live, love, and have fun!</a></p>
+					<p>Now do you see why it was so easy for me to fall in love with Northern California? It's the very best of everything our great country has to offer, and there's no place I'd rather <a href="http://mamaknowsitall.com/" target="_blank">live, love, and have fun!</a></p>
 				</div>
 			</div>
 		</div>
@@ -1155,7 +1155,7 @@ $(function() {
 		</div>
 		<div class="row">
 			<div class="col-xs-6 col-md-6">
-				<p>Central California is a wonderful region of the Golden State, with the ocean and mountains surrounding the family-owned farms and quaint towns that you'll run into simply by driving down the scenic highways. Families can always find something that they enjoy doing. Whether we choose a day at the beach, a tour of historic missions, or fruit picking at a farm, Central California will give us <a href="http://livingmividaloca.com/">three days of fun</a>, great meals, and bonding moments that will carry us into our future California travels.</p>
+				<p>Central California is a wonderful region of the Golden State, with the ocean and mountains surrounding the family-owned farms and quaint towns that you'll run into simply by driving down the scenic highways. Families can always find something that they enjoy doing. Whether we choose a day at the beach, a tour of historic missions, or fruit picking at a farm, Central California will give us <a href="http://livingmividaloca.com/" target="_blank">three days of fun</a>, great meals, and bonding moments that will carry us into our future California travels.</p>
 			</div>
 			<div class="col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
 				<img class="lazy sect-break under animateblock btm" data-original="images/pattie/supplied_pattie_2.jpg" width="2000" height="1000">
