Hero region credit added

--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@ $(function() {
 </section>
 
 <section class="hero region full-page" id="nca-hero">
+	<div class="parralax-credit"><p>Westend61/Getty Images</p></div>
 	<img src="assets/VCA_white_gold.png" class="vca-hero-logo">
 	<img src="images/northern-title.svg" class="main-title">
 	<video autoplay loop muted>
