Next/Previous Buttons Added

--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@ $(function() {
 	</div>
 </section>
 
+<!-- Mobile Nav Buttons -->
+<div class="mobile-nav-buttons">
+	<ul id="next-prev">
+		<li id="up-mobile-btn"><a class="previous"><img src="assets/mobile_arrow.png"></a></li>
+		<li id="down-mobile-btn"><a class="next"><img src="assets/mobile_arrow.png"></a></li>
+	</ul>
+</div>
+
 <section class="hero main-full-page mobile-hero" id="main-hero">
 	<div class="height-wrap">
 		<div class="parralax-credit"><p>J. Andruckow/Getty Images</p></div>
