All mobile hero credit added

--- a/index.html
+++ b/index.html
@@ -1059,6 +1059,7 @@ $(function() {
 </section>
 
 <section class="hero region full-page" id="cca-hero">
+	<div class="parralax-credit"><p>Alastair McKay/Getty Images</p></div>
 	<img src="assets/VCA_white_gold.png" class="vca-hero-logo">
 	<img src="images/central-title.svg" class="main-title">
 	<video autoplay loop muted>
@@ -1519,6 +1520,7 @@ $(function() {
 </section>  
 
 <section class="hero region full-page" id="sca-hero">
+	<div class="parralax-credit"><p>Dancestrokes/Getty Images</p></div>
 	<img src="assets/VCA_white_gold.png" class="vca-hero-logo">
 	<img src="images/southern-title.svg" class="main-title">
 	<video autoplay loop muted>
