Footer Fixed 4 Mobile

--- a/index.html
+++ b/index.html
@@ -2167,11 +2167,11 @@ $(function() {
 <section id="footer">
 	<ul>
 		<li><a href="https://subscription.timeinc.com/storefront/privacy/people/generic_privacy_new.html?dnp-source=E" target="_blank">People Privacy Policy</a></li>
-		<li><span class="dvdr">|</span></li>
+		<li class="ftr-dvdr"><span class="dvdr">|</span></li>
 		<li><a href="https://subscription.timeinc.com/storefront/privacy/people/generic_privacy_new.html?dnp-source=B#california" target="_blank">Your California Privacy Rights</a></li>
-		<li><span class="dvdr">|</span></li>
+		<li class="ftr-dvdr"><span class="dvdr">|</span></li>
 		<li><a href="https://subscription.timeinc.com/storefront/privacy/people/privacy_terms_service.html" target="_blank">Terms of Service</a></li>
-		<li><span class="dvdr">|</span></li>
+		<li class="ftr-dvdr"><span class="dvdr">|</span></li>
 		<li><a href="http://www.visitcalifornia.com/privacy-policy" target="_blank">Visit California Privacy Policy</a></li>
 	</ul>
 </section>
