--- a/index.html
+++ b/index.html
@@ -72,18 +72,14 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 <script src="js/script.js"></script>
 <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
 <script type="text/javascript" src="js/jquery.lazyload.min.js"></script>
-<script type="text/javascript">
-$(function() {
-    $("img.lazy").lazyload();
-});
-</script>
+<script type="text/javascript">$(function(){$("img.lazy").lazyload();});</script>
 
 <section id="legal-header">
 	<p>Paid Content from <a href="http://www.visitcalifornia.com/california-family" target="_blank"><span class="bold">Visit California</span></a><img src="assets/info.gif" class="info"></p>
 	<a href="http://www.people.com/people/" target="_blank"><div class="people-logo"></div></a>
 	<ul class="social">
 		<li class="facebook">
-			<a href="http://sponsored.people.com/visitcalifornia" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href), 'facebook-share-dialog', 'width=626,height=436'); return false;">
+			<a href="http://sponsored.people.com/visitcalifornia" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http://sponsored.people.com/visitcalifornia', 'facebook-share-dialog', 'width=626,height=436'); return false;">
 				<img src="assets/fb.png">
 			</a>
 		</li>
