Unnecessary items deleted from folder
Vendor prefixes added, etc

--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 	</div>
 	<video autoplay loop muted>
 		<source src="video/VCA_Family_Hero_General_v1.webmhd.webm" type="video/webm">
-		<source src="video/VCA_Family_Hero_General_v1.mp4" type="video/mp4">Your browser does not support the video tag.
+		<source src="video/VCA_Family_Hero_General_v1.mp4" type="video/mp4">
+		Your browser does not support the video tag.
 	</video>
 </section>
 
