full screen icon added

--- a/index.html
+++ b/index.html
@@ -616,7 +616,10 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 		</div>
 		<div class="row">
 			<div class="col-sm-12 col-md-6 col-md-offset-6 animateblock btm">
-				<a class="fancybox" href="images/camp-ca/steep-ravine.jpg"><img class="lazy" data-original="images/camp-ca/steep-ravine.jpg" width="2000" height="1000"></a>
+				<a class="fancybox" href="images/camp-ca/steep-ravine.jpg">
+					<img class="full-screen-icon" src="assets/full-screen.png">
+					<img class="lazy" data-original="images/camp-ca/steep-ravine.jpg" width="2000" height="1000">
+				</a>
 			</div>
 		</div>
 		<div class="row">
@@ -639,7 +642,10 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 		</div>
 		<div class="row">
 			<div class="col-xs-12 col-md-6 col-md-offset-6 animateblock btm">
-				<a class="fancybox" href="images/camp-ca/mackerricher.jpg"><img class="lazy" data-original="images/camp-ca/mackerricher.jpg" width="2000" height="1000"></a>
+				<a class="fancybox" href="images/camp-ca/mackerricher.jpg">
+					<img class="full-screen-icon" src="assets/full-screen.png">
+					<img class="lazy" data-original="images/camp-ca/mackerricher.jpg" width="2000" height="1000">
+				</a>
 			</div>
 		</div>
 		<div class="row">
@@ -662,7 +668,10 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 		</div>
 		<div class="row">
 			<div class="col-xs-12 col-md-6 col-md-offset-6 animateblock btm">
-				<a class="fancybox" href="images/camp-ca/beach.jpg"><img class="lazy" data-original="images/camp-ca/beach.jpg" width="2000" height="1000"></a>
+				<a class="fancybox" href="images/camp-ca/beach.jpg">
+					<img class="full-screen-icon" src="assets/full-screen.png">
+					<img class="lazy" data-original="images/camp-ca/beach.jpg" width="2000" height="1000">
+				</a>
 			</div>
 		</div>
 		<div class="row">
@@ -685,7 +694,10 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 		</div>
 		<div class="row">
 			<div class="col-xs-12 col-md-6 col-md-offset-6 animateblock btm">
-				<a class="fancybox" href="images/camp-ca/tomales.jpg"><img class="lazy" data-original="images/camp-ca/tomales.jpg" width="2000" height="1000"></a>
+				<a class="fancybox" href="images/camp-ca/tomales.jpg">
+					<img class="full-screen-icon" src="assets/full-screen.png">
+					<img class="lazy" data-original="images/camp-ca/tomales.jpg" width="2000" height="1000">
+				</a>
 			</div>
 		</div>
 		<div class="row">
@@ -709,7 +721,10 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 		<div class="row">
 			<div class="col-xs-12 col-md-6 col-md-offset-6">
 				<div class="animateblock btm">
-					<a class="fancybox" href="images/camp-ca/sequoia.jpg"><img class="lazy" data-original="images/camp-ca/sequoia.jpg" width="2000" height="1000"></a>
+					<a class="fancybox" href="images/camp-ca/sequoia.jpg">
+						<img class="full-screen-icon" src="assets/full-screen.png">
+						<img class="lazy" data-original="images/camp-ca/sequoia.jpg" width="2000" height="1000">
+					</a>
 				</div>
 			</div>
 		</div>
@@ -734,7 +749,10 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 		<div class="row">
 			<div class="col-xs-12 col-md-6 col-md-offset-6">
 				<div class="animateblock btm">
-					<a class="fancybox" href="images/camp-ca/bigbasin.jpg"><img class="lazy" data-original="images/camp-ca/bigbasin.jpg" width="2000" height="1000"></a>
+					<a class="fancybox" href="images/camp-ca/bigbasin.jpg">
+						<img class="full-screen-icon" src="assets/full-screen.png">
+						<img class="lazy" data-original="images/camp-ca/bigbasin.jpg" width="2000" height="1000">
+					</a>
 				</div>
 			</div>
 		</div>
