Full screen icons and styles finished.

--- a/index.html
+++ b/index.html
@@ -617,7 +617,9 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 		<div class="row">
 			<div class="col-sm-12 col-md-6 col-md-offset-6 animateblock btm">
 				<a class="fancybox" href="images/camp-ca/steep-ravine.jpg">
-					<img class="full-screen-icon" src="assets/full-screen.png">
+					<div class="full-screen">
+						<div class="full-screen-wrap"><img src="assets/full-screen.png"></div>
+					</div>
 					<img class="lazy" data-original="images/camp-ca/steep-ravine.jpg" width="2000" height="1000">
 				</a>
 			</div>
@@ -643,7 +645,9 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 		<div class="row">
 			<div class="col-xs-12 col-md-6 col-md-offset-6 animateblock btm">
 				<a class="fancybox" href="images/camp-ca/mackerricher.jpg">
-					<img class="full-screen-icon" src="assets/full-screen.png">
+					<div class="full-screen">
+						<div class="full-screen-wrap"><img src="assets/full-screen.png"></div>
+					</div>
 					<img class="lazy" data-original="images/camp-ca/mackerricher.jpg" width="2000" height="1000">
 				</a>
 			</div>
@@ -669,7 +673,9 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 		<div class="row">
 			<div class="col-xs-12 col-md-6 col-md-offset-6 animateblock btm">
 				<a class="fancybox" href="images/camp-ca/beach.jpg">
-					<img class="full-screen-icon" src="assets/full-screen.png">
+					<div class="full-screen">
+						<div class="full-screen-wrap"><img src="assets/full-screen.png"></div>
+					</div>
 					<img class="lazy" data-original="images/camp-ca/beach.jpg" width="2000" height="1000">
 				</a>
 			</div>
@@ -695,7 +701,9 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 		<div class="row">
 			<div class="col-xs-12 col-md-6 col-md-offset-6 animateblock btm">
 				<a class="fancybox" href="images/camp-ca/tomales.jpg">
-					<img class="full-screen-icon" src="assets/full-screen.png">
+					<div class="full-screen">
+						<div class="full-screen-wrap"><img src="assets/full-screen.png"></div>
+					</div>
 					<img class="lazy" data-original="images/camp-ca/tomales.jpg" width="2000" height="1000">
 				</a>
 			</div>
@@ -719,13 +727,13 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12 col-md-6 col-md-offset-6">
-				<div class="animateblock btm">
-					<a class="fancybox" href="images/camp-ca/sequoia.jpg">
-						<img class="full-screen-icon" src="assets/full-screen.png">
-						<img class="lazy" data-original="images/camp-ca/sequoia.jpg" width="2000" height="1000">
-					</a>
-				</div>
+			<div class="col-xs-12 col-md-6 col-md-offset-6 animateblock btm">
+				<a class="fancybox" href="images/camp-ca/sequoia.jpg">
+					<div class="full-screen">
+						<div class="full-screen-wrap"><img src="assets/full-screen.png"></div>
+					</div>
+					<img class="lazy" data-original="images/camp-ca/sequoia.jpg" width="2000" height="1000">
+				</a>
 			</div>
 		</div>
 		<div class="row">
@@ -747,13 +755,13 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12 col-md-6 col-md-offset-6">
-				<div class="animateblock btm">
-					<a class="fancybox" href="images/camp-ca/bigbasin.jpg">
-						<img class="full-screen-icon" src="assets/full-screen.png">
-						<img class="lazy" data-original="images/camp-ca/bigbasin.jpg" width="2000" height="1000">
-					</a>
-				</div>
+			<div class="col-xs-12 col-md-6 col-md-offset-6 animateblock btm">
+				<a class="fancybox" href="images/camp-ca/bigbasin.jpg">
+					<div class="full-screen">
+						<div class="full-screen-wrap"><img src="assets/full-screen.png"></div>
+					</div>
+					<img class="lazy" data-original="images/camp-ca/bigbasin.jpg" width="2000" height="1000">
+				</a>
 			</div>
 		</div>
 	</div>
