--- a/index.html
+++ b/index.html
@@ -72,7 +72,13 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 <script src="js/script.js"></script>
 <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
 <script type="text/javascript" src="js/jquery.lazyload.min.js"></script>
-<script type="text/javascript">$(function(){$("img.lazy").lazyload();});</script>
+<script type="text/javascript">
+	$(function() {
+	    $("img.lazy").lazyload({
+		    threshold : 200
+		});
+	});
+</script>
 
 <section id="legal-header">
 	<p>Paid Content from <a href="http://www.visitcalifornia.com/california-family" target="_blank"><span class="bold">Visit California</span></a><img src="assets/info.gif" class="info"></p>
