Added in Late Photo Credit Changes

--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 				<li class="parallax-bg__myers full-page" id="roadtrip-2">
 					<div class="container-fluid article">
 						<div class="caption parralax-credit">
-							<p><span class="italc cred">Gary Crabbe/Getty Images</span></p>
+							<p><span class="italc cred">Gary Crabbe/Alamy</span></p>
 						</div>
 						<div class="row">
 							<div class="col-md-6"> 
@@ -1248,7 +1248,7 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 			<li class="hideContent">
 				<div class="text-box">
 					<p>Housing nearly 46 million specimens, the California Academy of Sciences in San Francisco is one of the biggest attractions of its kind in the world. Between the planetarium, aquarium, and natural history museum, it's hard to know where to go first (and you can't go wrong). Don't miss the Osher Rainforest, a four-story neo-tropical rainforest where you'll encounter exotic birds and reptiles, amphibians, spiders, and Amazonian fish. Also, be sure to buy your tickets online in advance so you can skip the line when you arrive.</p>
-					<p class="italc cred">Courtesy of California Academy of Sciences</p>
+					<p class="italc cred">© 2012 California Academy of Sciences. All rights reserved.</p>
 				</div>
 			</li>
 		</ul>
@@ -1621,12 +1621,12 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 				<div class="caption">
 					<img class="arrow rotate-left" src="assets/arrow.png">
 					<p>Homer and the gang outside the Kwik-E-Mart.</p>
-					<p class="italc cred">Courtesy of Universal Studios Hollywood</p>
+					<p class="italc cred">TM & ©2016 FOX</p>
 				</div>
 				<div class="caption">
 					<img class="arrow rotate-down" src="assets/arrow.png">
 					<p>Characters at LEGOLAND pose outside the LEGOLAND Hotel.</p>
-					<p class="italc cred">LEGOLAND California Resort</p>
+					<p class="italc cred">Courtesy of LEGOLAND® California Resort</p>
 				</div>
 			</div>
 		</div>
@@ -1867,7 +1867,7 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 				<h4>LEGOLAND California</h4>
 				<div class="text-box">
 					<p>With over 60 rides, shows, a miniature golf course, hotel, and two water parks, LEGOLAND is hardly a vacation spot solely dedicated to plastic bricks. LEGO<span class="superscript"><sup>®</sup></span> fans can take in "The LEGO Movie 4D A New Adventure," scoot around in mini LEGO<span class="superscript"><sup>®</sup></span> cars, and even tour a LEGO<span class="superscript"><sup>®</sup></span> factory. Recently LEGOLAND unveiled LEGO<span class="superscript"><sup>®</sup></span> Ninjago Ride, an interactive attraction where you launch fireballs, shockwaves, and lightning bolts with your hands to defeat the Great Devourer and earn ninja status. Also be sure to check out Miniland USA, which recreates entire U.S. cities using millions of LEGO<span class="superscript"><sup>®</sup></span> bricks.</p>
-					<p class="italc cred">Courtesy of LEGOLAND California Resort</p>
+					<p class="italc cred">Courtesy of LEGOLAND® California Resort</p>
 				</div>
 			</li>
 		</ul>
