Redrew Maps + Altered Opening Zoom

--- a/index.html
+++ b/index.html
@@ -852,13 +852,13 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 	<div class="container-fluid article">
 		<div class="row">
 			<div class="col-md-12">
-				<h1 id="roadtrip-1a">The Anti<br>"Are We There Yet?"<br>Road Trip</h1>
+				<h1>The Anti<br>"Are We There Yet?"<br>Road Trip</h1>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-xs-12 col-md-8 col-md-offset-2">
-				<h2 id="roadtrip-1b">The Avenue of the Giants, a 30-mile stretch of Highway 101, is arguably one of America's coolest drives.</h2>
-				<p id="roadtrip-1c">For a slice of Americana, complete with trees you can drive right through, take the family on a road trip along Highway 101. The route, starting from Phillipsville (roughly 225 miles north of San Francisco on the 101) and going north to Stafford, cuts through California's Humboldt Redwoods State Park, home to the densest concentration of old-growth redwoods in the world. Here's a guide for where to roam along this iconic stretch of road. It's a drive so spectacular you may not hear an "Are we there yet?" the whole time.</p>
+				<h2>The Avenue of the Giants, a 30-mile stretch of Highway 101, is arguably one of America's coolest drives.</h2>
+				<p id="roadtrip-1a">For a slice of Americana, complete with trees you can drive right through, take the family on a road trip along Highway 101. The route, starting from Phillipsville (roughly 225 miles north of San Francisco on the 101) and going north to Stafford, cuts through California's Humboldt Redwoods State Park, home to the densest concentration of old-growth redwoods in the world. Here's a guide for where to roam along this iconic stretch of road. It's a drive so spectacular you may not hear an "Are we there yet?" the whole time.</p>
 			</div>
 		</div>
 	</div>
@@ -867,7 +867,7 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 				<li class="parallax-bg__empty full-page" id="list-roadtrip">
 					<div class="container-fluid article">
 						<div class="circle-container" id="roadtrip-circle-1">
-							<div class="roadtrip-circle circle-bg-1 circle-bg-1a circle-bg-1b circle-bg-1c circle-bg-2 circle-bg-3 circle-bg-4 circle-bg-5 circle-bg-6"></div>
+							<div class="roadtrip-circle circle-bg-1 circle-bg-1a circle-bg-1b circle-bg-2 circle-bg-3 circle-bg-4 circle-bg-5 circle-bg-6"></div>
 						</div>
 						<div class="row">
 							<div class="col-md-6">
