Reworked Functionality of Maps
Instead of swapping background backgrounds in one circle, now have
multiple circles that simply fade in or out.

--- a/index.html
+++ b/index.html
@@ -872,7 +872,15 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 				<li class="parallax-bg__empty full-page" id="list-roadtrip">
 					<div class="container-fluid article">
 						<div class="circle-container" id="roadtrip-circle-1">
-							<div class="roadtrip-circle circle-bg-1 circle-bg-1a circle-bg-1b circle-bg-2 circle-bg-3 circle-bg-4 circle-bg-5 circle-bg-6"></div>
+							<div class="roadtrip-circle circle-bg-1"></div>
+							<div class="roadtrip-circle circle-bg-1a"></div>
+							<div class="roadtrip-circle circle-bg-1b"></div>
+							<div class="roadtrip-circle circle-bg-2"></div>
+							<div class="roadtrip-circle circle-bg-2"></div>
+							<div class="roadtrip-circle circle-bg-3"></div>
+							<div class="roadtrip-circle circle-bg-4"></div>
+							<div class="roadtrip-circle circle-bg-5"></div>
+							<div class="roadtrip-circle circle-bg-6"></div>
 						</div>
 						<div class="row">
 							<div class="col-md-6">
