Disney commented out

--- a/index.html
+++ b/index.html
@@ -1859,7 +1859,7 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 			</li>
 		</ul>
 	</a>
-	<a href="#disneyland">
+	<!-- <a href="#disneyland">
 		<ul class="hideContentWrap" id="disneyland">
 			<li class="hideContentHeader"><h1>Make Your Dreams Come True</h1></li>
 			<img class="mob-slideshow" src="images/theme-parks/magic-mountain1.jpg">
@@ -1871,7 +1871,7 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 				</div>
 			</li>
 		</ul>
-	</a>
+	</a> -->
 	<a href="#legoland">
 		<ul class="hideContentWrap" id="legoland">
 			<li class="hideContentHeader"><h1>Entertain "Kids" of All Ages</h1></li>
