--- a/index.html
+++ b/index.html
@@ -82,7 +82,17 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 
 <!-- Preloader -->
 <div id="preloader">
-	<div id="status">&nbsp;</div>
+	<div class="preloader-inner full-page">
+	<div id="status">
+		<!-- <img src="images/preloader.svg"> -->
+		<p>loading</p>
+		<div class="bounce">
+	      <div></div>
+	      <div></div>
+	      <div></div>
+	    </div>
+	</div>
+	</div>
 </div>
 
 <section id="legal-header">
@@ -2158,15 +2168,15 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 <script src="js/bootstrap.min.js"></script>
 
 <!-- Preloader -->
-<script type="text/javascript">
-	//<![CDATA[
-		$(window).load(function() { // makes sure the whole site is loaded
-			$('#status').fadeOut(); // will first fade out the loading animation
-			$('#preloader').delay(350).fadeOut('slow'); // will fade out the white DIV that covers the website.
-			$('body').delay(350).css({'overflow':'visible'});
-		})
-	//]]>
-</script>
+// <script type="text/javascript">
+// 	//<![CDATA[
+// 		$(window).load(function() { // makes sure the whole site is loaded
+// 			$('#status').fadeOut(); // will first fade out the loading animation
+// 			$('#preloader').delay(350).fadeOut('slow'); // will fade out the white DIV that covers the website.
+// 			$('body').delay(350).css({'overflow':'visible'});
+// 		})
+// 	//]]>
+// </script>
 
 </body>
 </html>
