Preloader svg swapped for png

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 	<div class="preloader-inner full-page">
 	<div id="status">
 		<div class="graphic-wrap">
-			<img src="images/preloader.svg">
+			<img src="assets/preloader.png">
 			<img src="assets/status2.gif" id="loader-icon">
 		</div>
 	</div>
