Cleaned out image folders

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <!-- Simple Reach -->
 <script>
 __reach_config = {
-///pid: '544976bee79548dcfd0001e9',
-pid: ‘000000000000000000000000’,
+/pid: '544976bee79548dcfd0001e9',
+// pid: ‘000000000000000000000000’,
 title: 'State of Play',
 url: 'http://sponsored.people.com/visitcalifornia',
 date: '2016-06-01 10:00:00',
