Fixed Mobile Article Roadtrip Margins For First and Last LI Text Boxes

--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 						</div>
 						<div class="row">
 							<div class="col-md-6">
-								<div class="scroll-list-box">
+								<div class="scroll-list-box" id="mobile-fix-1">
 									<div class="box-header">
 										<div class="box-header-num">1</div>
 										<span class="stop-name">First Stop:</br>Phillipsville</span>
@@ -975,7 +975,7 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 						</div>
 						<div class="row">
 							<div class="col-md-6">
-								<div class="scroll-list-box">
+								<div class="scroll-list-box" id="mobile-fix-6">
 									<div class="box-header one-line">
 										<div class="box-header-num">6</div>
 										<span class="stop-name">Eternal Tree House</span>
