--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- Simple Reach -->
 <script>
 __reach_config = {
-/pid: '544976bee79548dcfd0001e9',
+pid: '544976bee79548dcfd0001e9',
 // pid: ‘000000000000000000000000’,
 title: 'State of Play',
 url: 'http://sponsored.people.com/visitcalifornia',
