Added Pattie Video
Only changes to Index

--- a/index.html
+++ b/index.html
@@ -1222,6 +1222,32 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 	</div>
 </section> 
 
+<!-- PATTIE VIDEO -->
+<img class="section-marker" src="images/cntrl-sect-icon.svg">
+<section class="bg-img-container-wrap southern" id="video-pattie">
+	<div class="container-fluid article">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>8 Tips for the</br>Perfect Beach Day</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h2>Blogger Pattie Cordova, the mama behind Living Mi Vida Loca, is sharing her tips and tricks for a fun-filled day on the water. Pattie loves planning picture perfect days for her family to enjoy everything California has to offer.</h2>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid article">
+		<div class="row">
+			<div class="col-md-12">
+				<div class="videoWrapper" id="pattie-vid">
+					<iframe class="youtube-video" id="pattie-vid" width="560" height="315" src="https://www.youtube.com/embed/ZLpjhjuhQtg" frameborder="0" allowfullscreen></iframe>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
 <!-- Edu(va)cation -->
 <img class="section-marker" src="images/cntrl-sect-icon.svg">
 <section class="bg-img-container-wrap central" id="eduvacation">
