--- a/index.html
+++ b/index.html
@@ -1616,7 +1616,7 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 		<div class="row">
 			<div class="col-xs-10 col-md-9">
 				<h1>Justine's Guide to Southern California</h1>
-				<h2>The mama behind The Typical Mom shares 25 of her favorite places to play with the family.</h2>
+				<h2>The mama behind The Typical Mom shares <!-- 25 -->23 of her favorite places to play with the family.</h2>
 				<div class="blogger-profile-wrap clearfix">
 					<div class="left-quadrant">
 						<div class="btm-row">
@@ -1639,16 +1639,16 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 			<div class="col-xs-6 col-md-6">
 				<p>I have lived in California almost my entire life, and I couldn't imagine raising my kids anywhere else! Southern California is unique because you can visit the beach, go to Disneyland, or play in the snow, usually within a two hour drive….you really can't find that anywhere else! If you haven't visited the Golden State yet, let us show you around. Here are 25 of our favorite spots with a lot of hidden gems in between!</p>
 				<p class="italc">Let's start with the fabulous amusement parks you will find here in Southern California. You can't pass these by:</p>
-				<h4>1</h4>
+				<!-- <h4>1</h4>
 				<h3>Disneyland</h3>
 				<p>When you think of California, you probably picture Mickey Mouse, and a trip to Disneyland is definitely something every child (and adult) will remember forever!</p>
 				<h4>2</h4>
 				<h3>Disney California Adventure Park</h3>
-				<p>On the same grounds as Disneyland, this second park is unique; it offers live entertainment and an extended Disney feel, with additional rides like our favorite, Soarin' Over California.</p>
-				<h4>3</h4>
+				<p>On the same grounds as Disneyland, this second park is unique; it offers live entertainment and an extended Disney feel, with additional rides like our favorite, Soarin' Over California.</p> -->
+				<h4>1</h4>
 				<h3>Knott's Berry Farm</h3>
 				<p>Knott's really has something for everyone, with lots of live entertainment too, which we love. There are smaller rides in Camp Snoopy, classics like the Log Ride, and roller coasters for the more daring. Throughout the year they have special events during Christmas, their Boysenberry Festival, and more, which keep it fresh.</p>
-				<h4>4</h4>
+				<h4>2</h4>
 				<h3>Universal Studios Hollywood</h3>
 				<p>A really fun place for rides and live entertainment featuring your favorite movie characters, and their studio tour is amazing. We love seeing where some of our favorite movies were filmed!</p>
 			</div>
@@ -1678,23 +1678,23 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 		</div>
 		<div class="row">
 			<div class="col-xs-6 col-md-6">
-				<h4>5</h4>
+				<h4>3</h4>
 				<h3>LEGOLAND</h3>
 				<p>A fun place for younger kids, especially those who love building! There are not only fun rides at LEGOLAND but building stations, a great waterpark, and Sea Life Aquarium adjacent to the park as well. It's fascinating what they've made out of LEGO<span class="superscript"><sup>&reg;</sup></span> bricks!</p>
 				<p class="italc">Let's move on to a few water locations we love in Southern California! Some of them you may have heard of, and others are hidden gems that are must-sees during your visit here.</p>
-				<h4>6</h4>
+				<h4>4</h4>
 				<h3>SeaWorld San Diego</h3>
 				<p>This park has changed a lot over the years and even has a few roller coasters too! Our favorite attractions are still the shows (with seasonal offerings as well), and the hands-on exhibits are always a hit.</p>
-				<h4>7</h4>
+				<h4>5</h4>
 				<h3>The <span class="italc">Queen Mary</span></h3>
 				<p>This floating hotel in Long Beach offers tours. Even my kids thought it was fascinating to see the artifacts and the exhibits on the ship. In the winter months there's the Queen Mary CHILL with ice sculptures, tubing, skating, and more (this has become our annual tradition).</p>
-				<h4>8</h4>
+				<h4>6</h4>
 				<h3>Aquarium of the Pacific</h3>
 				<p>This is quite a large aquarium, located in Long Beach, with a lot of outside exhibits, such as a penguin habitat and shark-touch pools that we haven't seen anywhere else!</p>
-				<h4>9</h4>
+				<h4>7</h4>
 				<h3>Birch Aquarium at Scripps</h3>
 				<p>Located in La Jolla, this aquarium offers a lot of hands-on exhibits for kids, and half of the facility is outdoors, which we love! Featuring interactive exhibits and exciting science displays, it's great for little hands and in an absolutely gorgeous location overlooking the beach.</p>
-				<h4>10</h4>
+				<h4>8</h4>
 				<h3>Tide Pools</h3>
 				<p>We love visiting the many tide pools in Southern California! One of our favorite spots is in La Jolla, called Children's Pool. There's a beach where you can look for small sea creatures and get up close and personal with the harbor seals and sea lions, who love to sun themselves!</p>
 			</div>
@@ -1724,7 +1724,7 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 		</div>
 		<div class="row">
 			<div class="col-xs-6 col-md-6">
-				<h4>11</h4>
+				<h4>9</h4>
 				<h3>Ocean Institute</h3>
 				<p>If you're coming to Southern California to visit the ocean and all it has to offer, this is a great place to visit in Dana Point! They offer hands-on exploration, and taking a whale-watching trip is a must, too…it's amazing!</p>
 			</div>
@@ -1734,13 +1734,13 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 	<div class="container-fluid article blogger-post">
 		<div class="row">
 			<div class="col-xs-6 col-md-6">
-				<h4>12</h4>
+				<h4>10</h4>
 				<h3>Huntington Beach Adventure Playground</h3>
 				<p>This is a hidden gem! If your childhood included playing in mud puddles, sliding down slippery slopes with your friends, and not caring about how dirty you got….your kids will get to experience that kind of down-home fun here too!</p>
-				<h4>13</h4>
+				<h4>11</h4>
 				<h3>Waterparks</h3>
 				<p>There are so many great waterparks in Southern California</a>, and since it is warm basically year round here you can visit them often!</p>
-				<h4>14</h4>
+				<h4>12</h4>
 				<h3>The beach</h3>
 				<p>I'd be here all day if I listed all of the beaches we love, and since there are so many, we like visiting a new one each time we head out for some sun and sand. Two of our favorites are Carlsbad State Beach and San Clemente State Beach, because we lived there for many years. There is a playground, and lots of parking.</p>
 			</div>
@@ -1760,34 +1760,34 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 		<div class="row">
 			<div class="col-xs-6 col-md-6">
 				<p class="italc">If you're an animal lover and you're looking for fun places in Southern California to visit them, there are several locations, both big and small.</p>
-				<h4>15</h4>
+				<h4>13</h4>
 				<h3>San Diego Zoo Safari Park</h3>
 				<p>Probably one of our favorite places to go and see animals roaming the acres and acres of land. Their Africa Tram is like nothing you've ever been on, as it takes you on a half hour tour that allows you to see the animals up close.</p>
-				<h4>16</h4>
+				<h4>14</h4>
 				<h3>Rancho Las Lomas</h3>
 				<p>A true hidden gem! This is a great zoological garden with rescued animals that can no longer live in the wild for a variety of reasons. You can get up close with unique animals and take a tour of the facility, which is nestled in the small city of Silverado. It's pretty neat.</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-xs-6 col-md-6">
-				<h4>17</h4>
+				<h4>15</h4>
 				<h3>Bates Nut Farm</h3>
 				<p>Our favorite hidden gem!! My kids love feeding animals, seasonal festivals, and large fields where we can have a picnic and run free. Bates offers all of these things! Each season offers something new with a small-town feel, and it's become our tradition each October to pick pumpkins right off the vine!</p>
 				<p class="italc">Now we're moving right along to several fun children's museums we have here in Southern California that we visit quite often and are a must-see!</p>
-				<h4>18</h4>
+				<h4>16</h4>
 				<h3>Discovery Cube OC</h3>
 				<p>One of our all-time favorite hands-on museums for children in Orange County is called Discovery Cube. Throughout the year they offer different exhibits and incredible events like Bubblefest. Children can pretend they're hockey players, shop at a grocery store meant just for them, learn all about hurricanes and much more. It's three stories full of fun, and you can easily spend the whole day there!</p>
-				<h4>19</h4>
+				<h4>17</h4>
 				<h3>Pennypickle's Workshop</h3>
 				<p>Another hidden gem! We love visiting small places like this one and sharing them with others. Although it's on a smaller scale, this children's museum is very interactive and is located in a quaint area of Old Town Temecula, which is fun to walk around after your visit there.</p>
-				<h4>20</h4>
+				<h4>18</h4>
 				<h3>Orange Empire Railway Museum</h3>
 				<p>If you're a train enthusiast, this is a great place to visit! There are different events year round, and they even have Thomas the Tank Engine visit each year!</p>
 				<p class="italc">Now let's get back outdoors, shall we! There are so many great places to camp and hike in Southern California and we have visited many of them, so let me share a few of our favorites.</p>
-				<h4>21</h4>
+				<h4>19</h4>
 				<h3>Idyllwild</h3>
 				<p>We visit Idyllwild often because it isn't too far from our home in Temecula and it's such a gorgeous area to take a walk, have a picnic, and just unplug as a family. It reminds us of a smaller version of Yosemite, offering small campgrounds as well as a lake just outside of town, called Lake Hemet, where sometimes we just skip rocks and chat.</p>
-				<h4>22</h4>
+				<h4>20</h4>
 				<h3>Santa Rosa Plateau</h3>
 				<p>Our all-time favorite place to hike! Gorgeous isn't a big enough word to describe this area. There are many trails to choose from and it's fairly flat, so it's easy for children to join the fun! We pack a picnic and head out for an afternoon together often, and we always see something new.</p>
 			</div>
@@ -1821,14 +1821,14 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 		</div>
 		<div class="row">
 			<div class="col-xs-6 col-md-6">
-				<h4>23</h4>
+				<h4>21</h4>
 				<h3>Julian</h3>
 				<p>Another hidden gem! We love finding small quaint towns like this one and just making a day trip of it. It's a great little place to stay at a bed-and-breakfast, explore the beautiful woody area, visit their underground candy mine, and have a slice of their noteworthy apple pie!</p>
 				<p class="italc">To round out our list of 25 reasons to visit California, we want to share a few great places where you can pick your own veggies and fruit….so much fun with kids!</p>
-				<h4>24</h4>
+				<h4>22</h4>
 				<h3>Tanaka Farms</h3>
 				<p>Not only can you pick your own fruits and vegetables, but you can take a CookOut Tour, where they will help grill what you've picked right then and there! Very educational and fun for adults and kids!</p>
-				<h4>25</h4>
+				<h4>23</h4>
 				<h3>Temecula Blueberry Company</h3>
 				<p>This is a fantastic hidden gem! There are many strawberry fields here and there, but it's rare to find a blueberry field where you can gather your own fruit right off the bush and bring it home that day. Offering movie nights during the summer, story time, and a few farm animals, it's a fun experience for little hands and delicious for everyone!</p>
 				<p class="italc">From <a href="http://temeculablogs.com/" target="_blank">The Typical Mom</a> family to yours, I hope you find several activities you love among our suggestions here and make memories with each other this year that will last a lifetime!</p>
