Small fix made to the Simple Reach script

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ pid: '544976bee79548dcfd0001e9',
 title: 'State of Play',
 url: 'http://sponsored.people.com/visitcalifornia',
 date: '2016-06-01 10:00:00',
-tags: ['sponsored::site::People’,’sponsored::Visit California’],
+tags: ['sponsored::site::People','sponsored::Visit California'],
 ignore_errors: false,
 };
 (function(){
